# momentum-pullback-lab

./: .gitignore  CONTEXT.md  LICENSE  README.md  lab_momentum_pullback_argentina_usa.md  pyproject.toml  run_lab.py  tickets.json
config/: argentina.yaml  costs.yaml  experiments.yaml  usa.yaml
docs/adr/: 0001-evaluate-liquidity-by-capital-scale.md  0002-ranking-as-filter-not-rotation.md  0003-scale-specific-tradable-universe-and-ranking.md  0004-primary-gate-5k-10k-15k-stretch.md  0005-freeze-parameters-for-usa-transfer.md
results/: 01_data_quality_report.md  02_benchmarks.md  03_pullback_signals.md  04_entry_confirmation.md  05_exit_rules.md  06_portfolio_results.md  07_walkforward.md  09_attribution.md  10_method_validation.md  10_method_validation_review.md  11_incremental.md  12_atr_robustness.md  13_walkforward_variant_e.md  14_execution_and_filter_audit.md  14_revision_resultados_y_proximos_pasos.md  15_reporte_final.md  16_conclusiones.md  FINAL_DECISION.md
src/lab_momentum_pullback/: __init__.py  adjustments.py  attribution.py  config_loader.py  costs.py  data_loader.py  exits.py  indicators.py  mep.py  portfolio.py  reporting.py  signals.py
